--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -36,7 +36,9 @@
         <img id="img4" src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fG1vZGVsfGVufDB8fDB8fHww" alt="">
     
     <h3 class="btm-left">Your Smile, Our Position</h3>
-
+        <div class="down_arrow">
+            <i class="ri-arrow-down-line"></i>
+        </div>
     <h3 class="btm-right">Best Start Up of 2023</h3>
     </div>
 </body>
