--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Bent Lindberg</title>
   </head>
   <body>
     <div id="main">
