Project 2 Footer Added

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -252,6 +252,44 @@
           </div>
         </div>
       </div>
+
+      <div id="footer">
+        <div id="text-footer">
+          <h2>(Connect)</h2>
+          <h1>Let's talk</h1>
+          <button class="btn">Get in Touch</button>
+        </div>
+          
+
+          <div id="footer-pages">
+            <div id="pages">
+              <h3 style="color: rgb(194, 189, 189);">(Pages)</h3>
+              <h3>Home</h3>
+              <h3>About</h3>
+              <h3>Contact</h3>
+              <button class="btn">More Templates</button>
+            </div>
+
+            <div id="cms">
+                <h3 style="color: rgb(194, 189, 189);">(CMS)</h3>
+                <h3>Work</h3>
+                <h3>Work Single</h3>
+                <h3>Blog</h3>
+                <h3>Blog Single</h3>
+                <h3>Shop</h3>
+                <h3>Shop Single</h3>
+            </div>
+
+            <div id="utility-pages">
+              <h3 style="color: rgb(194, 189, 189);">(Utility Pages)</h3>
+              <h3>404 Error</h3>
+              <h3>Password</h3>
+              <h3>Styleguide</h3>
+              <h3>Licensing</h3>
+              <h3>Changelog</h3>
+            </div>
+          </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
